fixed issues of alignment when select qubely full width

--- a/assets/css/price.css
+++ b/assets/css/price.css
@@ -1,7 +1,5 @@
 .premium-price {
   display: flex;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 20px; }
   .premium-price span {
     align-self: center; }
