--- a/src/blocks/button/style.scss
+++ b/src/blocks/button/style.scss
@@ -11,7 +11,7 @@
 $pbBackgroundColor: rgb(242, 242, 242);
 
 .premium-button__wrap {
-    text-align: center;
+    // text-align: center;
 }
 
 .premium-button {
@@ -537,7 +537,7 @@ $pbBackgroundColor: rgb(242, 242, 242);
 $pbBackgroundColor: rgb(242, 242, 242);
 
 .premium-button__wrap {
-    text-align: center;
+    // text-align: center;
 }
 
 .premium-button {
