--- a/src/blocks/price/style.scss
+++ b/src/blocks/price/style.scss
@@ -1,7 +1,7 @@
 .premium-price {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
     margin-bottom: 20px;
     span {
         align-self: center;
